fix button width on mobile

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -84,7 +84,8 @@ li.landing-link {
       font-size: 1em;
       font-weight: 100;
       line-height: 1.25;
-      padding: 0.75em;
+      padding: 0.75em 0.25em;
+      text-align: center;
       box-sizing: border-box;
       display: inline-block;
       margin: 0 auto;
